2016-04-20 Marino Romano <sromanos@cern.ch>
	* Updating multijet estimation tools for the muon channel
	* Updating the fake rates: 200416_WJetsCR_noBtag and 200416_WJetsCR_noBtag (e and mu channel)

2016-04-04 Marino Romano <sromanos@cern.ch>
	* Updating multijet estimation tools
	* New 3D paramatrization of the fake rates
	* Adding new 2D and 3D fake rates for W+jets (Only electron channel for the moment)

2015-12-23 Marino Romano <sromanos@cern.ch>
	* Updating multijet estimation tools
	* Adding reaf and fake efficiencies maps: eff_ttbar.root and fake.root
	* TopNtupleAnalysis-00-02-11

2015-12-04 Marino Romano <sromanos@cern.ch>
	* Adding trigger branches to the MiniTree (prescaled and unprescaled). 
	* if prescaled triggers are used, implementing weights (for the fake estimate, so should not affect the standard analysis).
	* Updates on the fake estimation tools
	* TopNtupleAnalysis-00-02-09

2015-12-02 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Added flag in read.cxx to apply EWK correction in ttbar.
	* TopNtupleAnalysis-00-02-08

2015-11-03 Marino Romano <sromanos@cern.ch>
	* Updating the MM code 

2015-10-29 Marino Romano <sromanos@cern.ch>
	* Updating the code to read z0, d0 and d0sig for electron and muon

2015-10-27 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Added track jets in Event class. Added nTrk cut for track jets when
	applying track jet b-tagging. Added tau32 information in large jets.
	Added missing cross section information in XSection file. Added helper
	scripts to run code in lxbatch. Added option in read to remove high
	mtt events in the ttbar 410000 sample to avoid overlap with the
	mttsliced samples.
	* Added configurable setup for plotting scripts in plotting/.
	* TopNtupleAnalysis-00-02-05

2015-10-26 Marino Romano <sromanos@cern.ch>
	* Fixing typo bug in doQCDstudies.py
	* Improving getMMWeights code
	* TopNtupleAnalysis-00-02-04

2015-10-19 Marino Romano <sromanos@cern.ch>