@@ -29,6 +29,7 @@ OBJS_READ += $(OBJS)
 OBJS_READ += Root/EventCount.o
 OBJS_READ += Root/Analysis.o Root/AnaTtresSL.o Root/AnaTtresSLMtt.o Root/AnaTuDoSL.o Root/AnaTuDoTtresResolved.o Root/AnaTuDoTtresBoosted.o Root/HistogramService.o Root/AnaTtresQCD.o
 OBJS_READ += Root/WeakCorrScaleFactorParam.o
+OBJS_READ += Root/TopEFTWeight.o
 OBJS_READ += util/read.o
 
 OBJS_READTUDO += $(OBJS)
